correct instagram cards visibility for mobile

--- a/app/scss/components/main/instagram-section.scss
+++ b/app/scss/components/main/instagram-section.scss
@@ -31,3 +31,12 @@
   }
 }
 
+@include small {
+  .slide {
+    display: block !important;
+  }
+
+  .slide .instagram-section-card:not(:first-child) {
+    display: none;
+  }
+}
